--- a/pages/payment.user.css
+++ b/pages/payment.user.css
@@ -34,16 +34,23 @@ nav{
     border-radius: 10px 0 0 10px;
 }
 .logo_top{
-    font-family: "Noto Serif", serif;
+font-family: "Poppins", sans-serif;
   font-optical-sizing: auto;
   font-weight: 900;
   font-style: italic;
   font-variation-settings:"wdth" 100;
   font-size: 30px;
   position: relative;
-  top: -20px;
-  left: 30px;
-  color: #fff;
+  top: 0px;
+  left: 25px;
+  color: #333;
+  align-items: center;
+  display: flex;
+  gap: 10px;
+  width: 150px;
+}
+.logo_top img{
+    width: 30px;
 }
 nav a{
     text-decoration: none;
