--- a/pages/FAQ.user.css
+++ b/pages/FAQ.user.css
@@ -34,7 +34,7 @@ body{
 .main-container h4{
     margin: -10px auto;
     text-align: center;
-    width: 800px;
+    width: 100%;
     color: #333;
     font-weight: 400;
 }
